<resources>
    <string name="app_name">app-ws-textus-note</string>

    <string name="chinese_time_week_format">MM月dd日 EEEE</string>
    <string name="time_week_format"></string>

    <string name="bill_detail_year_format">%s年度统计</string>
    <string name="home_month_total_format">共%s元</string>
    <string name="month_income">本月收入</string>
    <string name="month_expenditure">本月支出</string>
    <string name="home_month_tips">月·支出</string>
    <string name="bill_detail_today">今日</string>
    <string name="bill_detail_year">本年度</string>
    <string name="bill_detail_month">本月</string>
    <string name="bill_detail_week">本周</string>
    <string name="month_bill_percent_income">本月收入占比</string>
    <string name="month_bill_percent_expenditure">本月支出占比</string>
    <string name="bill_expenditure_num_total_format">支出:&#160;%s笔</string>
    <string name="bill_income_num_total_format">收入:&#160;%s笔</string>
    <string name="tab_main_mine">我的</string>
    <string name="tab_main_home">首页</string>
    <string name="app_note_slogan">舒记，记录生活的温柔方式</string>
    <string name="app_mine_assets">我的资产</string>
    <string name="mine_coupon_format">%s张</string>
    <string name="mine_integral_format">积分:%s</string>
    <string name="mime_assets_assets_balance">余额</string>
    <string name="mime_assets_integral">积分</string>
    <string name="mine_assets_coupon">优惠卷</string>
    <string name="budget_name_time_1">今日预算</string>
    <string name="budget_name_time_2">本周预算%s</string>
    <string name="budget_name_time_3">%s月预算</string>
    <string name="budget_name_time_4">%s年度预算</string>
    <string name="budget_name_default">预算</string>
    <string name="budget_used_surplus_format">已使用%s,剩余%s</string>
    <string name="budget_used_percent">已使用</string>
    <string name="budget_surplus_percent">剩余\n%s</string>
    <string name="month_budget_format">%s月预算</string>
    <string name="mine_budget_list">我的预算</string>
    <string name="remaining_amount">剩余预算</string>
    <string name="budget_total_amount">预算总金额</string>
    <string name="budget_used_amount">支出总金额</string>
    <string name="budget_used">已使用</string>
    <string name="app_unit_temperature">℃</string>
    <string name="note_today_ie">今日收支</string>
    <string name="note_bill">记一笔</string>
    <string name="note_today_income">收入</string>
    <string name="note_today_expenditure">支出</string>
    <string name="note_today_balance">结余</string>
    <string name="note_memo_tips">偷得浮生半日闲</string>
    <string name="note_memo">添加备忘录</string>
    <string name="memo_degree_1">极度重要</string>
    <string name="memo_degree_2">重要</string>
    <string name="memo_degree_3">一般</string>
    <string name="memo_degree_4">可忽略</string>
    <string name="memo_degree">紧急程度</string>
    <string name="memo_time">提醒时间</string>
    <string name="memo_select_time">选择提醒时间</string>
    <string name="memo_end_time">截止时间</string>
    <string name="empty_note_list">无尘虑之扰心</string>
    <string name="note_plan_tips">明日之我，始于今朝</string>
    <string name="note_plan"><u>制定计划</u>></string>
    <string name="plan_goal_cycle_format">每%s%s%s%s</string>
    <string name="time_infinite">无限期</string>
    <string name="time_expired">已过期</string>
    <string name="plan_goal_progress">完成进度</string>
    <string name="plan_delete">删除计划</string>
    <string name="plan_complete">完成任务</string>
    <string name="plan_target_time_format">完成时间:%s</string>
    <string name="plan_priority_1">紧急</string>
    <string name="plan_priority_2">重要</string>
    <string name="plan_priority_3">一般</string>
    <string name="plan_priority_4">忽略</string>
    <string name="plan_complete_format">已完成:%s</string>
    <string name="plan_category_name_time">未来计划</string>
    <string name="plan_category_name_once">常规计划</string>
    <string name="plan_category_name_daily">每日计划</string>
    <string name="plan_category_name_week">每周计划</string>
    <string name="plan_category_name_month">每月计划</string>
    <string name="plan_category_name_year">每年计划</string>
    <string name="plan_category_name_quarter">季度计划</string>
    <string name="plan_category_name_goal">目标计划</string>
    <string name="plan_category_name_todo">代办计划</string>
    <string name="time_state_left_format">剩余:%s</string>
    <string name="time_state_out_format">超时:%s</string>
    <string name="plan_redmin_time_left_day_format">剩余%s天</string>
    <string name="plan_redmin_time_out_day_format">已超时%s天</string>
    <string name="plan_create_time">创建时间</string>
    <string name="plna_degree">紧急程度</string>
    <string name="plan_todo_time_format">代办时间:%s</string>
    <string name="plan_create_by">创建于</string>
    <string name="plan_redmin_month_daily">每月%s号</string>
    <string name="plan_redmin_time_format_daily">每天 %s</string>
    <string name="plan_redmin_time_format_month">每月%s号</string>
    <string name="plan_redmin_time_left_daily_hour">剩余%s小时</string>
    <string name="plan_redmin_time_left_daily_minute">剩余%s分钟</string>
    <string name="plan_redmin_time_left_daily_second">剩余%s秒</string>
    <string name="plan_redmin_time_out_daily_hour">已超时%s小时</string>
    <string name="plan_redmin_time_out_daily_minute">已超时%s分钟</string>
    <string name="plan_redmin_time_out_daily_second">已超时%s秒</string>

    <string name="plan_detail_state_1">开始计划</string>
    <string name="plan_detail_state_2">完成计划</string>
    <string name="plan_detail_state_3">删除计划</string>
    <string name="plan_detail_state_4">完成计划</string>
    <string name="plan_detail_state_5">重新开始</string>
    <string name="plan_type_1">常规计划</string>
    <string name="plan_type_2">每日计划</string>
    <string name="plan_type_3">代办计划</string>
    <string name="plan_urgency_1">特级</string>
    <string name="plan_urgency_2">紧急</string>
    <string name="plan_urgency_3">较急</string>
    <string name="plan_urgency_4">一般</string>
    <string name="plan_urgency_5">轻微</string>
    <string name="plan_state">计划状态</string>
    <string name="plan_state_select">请选择任务状态</string>
    <string name="plan_state_1">未开始</string>
    <string name="plan_state_2">进行中</string>
    <string name="plan_state_3">已完成</string>
    <string name="plan_state_4">已逾期</string>
    <string name="plan_state_5">已取消</string>
    <string name="plan_single_time_create">创建时间:%s</string>
    <string name="plan_cycle_unit_select">请选择计划周期</string>
    <string name="plan_goal_target">计划目标</string>
    <string name="plan_goal_time_left">剩余时间</string>
    <string name="plan_start_time_text">开始时间:%s</string>
    <string name="plan_start_time">开始时间</string>
    <string name="plan_end_time">完成时间</string>
    <string name="empty_plan_list">精心思考中</string>
    <string name="app_datatime_format_chinse_nosecond">yyyy年MM月dd日 HH:mm</string>
    <string name="main_note_date_format">yyyy年MM月dd日 EEEE</string>
    <string name="note_num_format">共%s条日记</string>
    <string name="daily_note_title">%s日·日记</string>
    <string name="month_format">%s月</string>
    <string name="day_format">%s日</string>
    <string name="note_daily_num_format">%s条</string>
    <string name="note_note"><u>写日记</u></string>
    <string name="hint_note_content">请输入日记内容</string>
</resources>
