<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="plan"
            type="com.wangshu.textus.note.entity.plan.PlanEntity"/>

    </data>

    <!--展示单次完成的计划列表，即一个正常的未来的计划-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_plan_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTextTheme.Normal"
            android:text="@{plan.planTypeText}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"/>

        <TextView
            android:id="@+id/tv_plan_state_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTextTheme.Normal"
            android:textColor="@{plan.stateTextColor()}"
            android:text="@{plan.showStateText()}"
            app:layout_constraintTop_toTopOf="@id/tv_plan_type"
            app:layout_constraintBottom_toBottomOf="@id/tv_plan_type"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/dp_10"/>

        <TextView
            android:id="@+id/tv_plan_state_line"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_base_line"/>

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/iv_plan_category_icon"
            android:layout_width="@dimen/rv_item_paln_icon_size"
            android:layout_height="@dimen/rv_item_paln_icon_size"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_state_line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dp_10"
            app:round="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@{plan.iconUrl}"/>

        <TextView
            android:id="@+id/tv_plan_category_single"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            style="@style/AppTextTheme.Normal"
            android:text="@{plan.showTitle()}"
            android:gravity="left|top"
            android:maxLines="4"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_plan_category_icon"
            app:layout_constraintStart_toEndOf="@id/iv_plan_category_icon"
            app:layout_constraintBottom_toBottomOf="@id/iv_plan_category_icon"
            android:layout_marginLeft="@dimen/dp_7" />


        <ImageView
            android:id="@+id/iv_plan_redmin_date_time"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_plan_redmin_date"
            app:layout_constraintTop_toBottomOf="@id/iv_plan_category_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_15"/>

        <TextView
            android:id="@+id/tv_plan_redmin_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTextTheme.Normal"
            android:text="@{plan.todoTimeText}"
            app:layout_constraintTop_toTopOf="@id/iv_plan_redmin_date_time"
            app:layout_constraintBottom_toBottomOf="@id/iv_plan_redmin_date_time"
            app:layout_constraintStart_toEndOf="@id/iv_plan_redmin_date_time"
            android:layout_marginLeft="@dimen/dp_5"/>

        <ImageView
            android:id="@+id/iv_plan_redmin_time_state"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            app:layout_constraintTop_toBottomOf="@id/iv_plan_redmin_date_time"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_5"
            android:src="@{plan.isEndTimeOut() ? @drawable/ic_plan_time_timeout : @drawable/ic_plan_time_remaining}"/>

        <TextView
            android:id="@+id/tv_plan_time_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_plan_redmin_time_state"
            app:layout_constraintBottom_toBottomOf="@id/iv_plan_redmin_time_state"
            app:layout_constraintStart_toEndOf="@id/iv_plan_redmin_time_state"
            android:layout_marginLeft="@dimen/dp_5"
            style="@style/AppTextTheme.Normal"
            android:text="@{plan.endTimeLeftText()}"
            android:textColor="@{plan.isEndTimeOut() ? @color/color_time_past : @color/color_time_future}"/>


        <TextView
            android:id="@+id/tv_plan_goal_line"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_plan_redmin_time_state"
            android:background="@color/color_base_line"
            android:layout_marginTop="@dimen/dp_10"/>

        <LinearLayout
            android:id="@+id/ll_plan_create_time"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/plan_create_time_height"
            android:gravity="center_vertical|left"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_goal_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme.Normal"
                android:text="@string/plan_create_by"
                android:textSize="@dimen/sp_11"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextTheme.Normal"
                android:text="@{plan.showCreateTimeText()}"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_plan_delete"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/shape_border_fillet_white_gray_15"
            app:layout_constraintTop_toTopOf="@id/ll_plan_create_time"
            app:layout_constraintBottom_toBottomOf="@id/ll_plan_create_time"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/plan_delete"
            style="@style/AppTextTheme.Normal"
            android:textSize="@dimen/sp_11"
            android:layout_marginRight="@dimen/dp_15"/>

        <TextView
            android:id="@+id/tv_plan_completed"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/shape_fillet_maintheme_15"
            app:layout_constraintTop_toTopOf="@id/ll_plan_create_time"
            app:layout_constraintBottom_toBottomOf="@id/ll_plan_create_time"
            app:layout_constraintEnd_toStartOf="@id/tv_plan_delete"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/plan_complete"
            style="@style/AppTextTheme.Normal"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
